--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "test:ui": "vitest --environment jsdom --root src/ --coverage.enabled=true --ui"
   },
   "dependencies": {
+    "@vuepic/vue-datepicker": "^8.6.0",
     "axios": "^1.6.8",
     "pinia": "^2.1.7",
     "vue": "^3.4.23",
